--- a/dashboard/modals/add_dustbin.html
+++ b/dashboard/modals/add_dustbin.html
@@ -46,7 +46,7 @@
           >
             Close
           </button>
-          <button type="button" class="btn btn-primary">Add Dustbin</button>
+          <button type="button" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
