--- a/dashboard/modals/add_comment.html
+++ b/dashboard/modals/add_comment.html
@@ -49,7 +49,7 @@
           >
             Close
           </button>
-          <button type="submit" class="btn btn-primary">Add Comment</button>
+          <button type="submit" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
