--- a/dashboard/modals/delete_bank_account_confirm.html
+++ b/dashboard/modals/delete_bank_account_confirm.html
@@ -1,5 +1,5 @@
 <form
-  action=""
+  action="delete_bank_account.inc.php"
   method="POST"
 >
   <div class="modal fade" id="bank-account-confirm-delete-modal">
@@ -28,7 +28,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          Are you sure you want to delete this bank account?
+          Are you sure you want to delete this bank account? <b>Note: </b> Customers linked with this account will be linked with the default bank account.
         </div>
         <div class="modal-footer">
           <button
